# qtmir

./: CMakeLists.txt  COPYING.LESSER  Jenkinsfile  NEWS
debian/: changelog  control  copyright  rules
debian/gles-patches/: convert-to-gles.patch
demos/: CMakeLists.txt  paths.h.in
demos/qtmir-demo-client/: main.cpp
demos/qtmir-demo-shell/: CMakeLists.txt  ResizeArea.qml  ScreenConfiguration.qml  Shell.qml  TitleBar.qml  Window.qml  WindowBufferSized.qml  WindowModelDebugView.qml  main.cpp  qml-demo-shell.qml  qml-demo-shell.qmlproject
include/qtmir/: displayconfigurationpolicy.h  displayconfigurationstorage.h  screen.h  windowmanagementpolicy.h
include/qtmir/miral/: display_configuration_storage.h
src/common/: debughelpers.cpp  debughelpers.h  mirqtconversion.h  windowcontrollerinterface.h  windowmodelnotifier.h  workspacecontrollerinterface.h
src/modules/: CMakeLists.txt
src/modules/QtMir/Application/: CMakeLists.txt  application_manager.cpp  application_manager.h  mirbuffersgtexture.cpp  mirbuffersgtexture.h  mirsurface.cpp  mirsurface.h  mirsurfaceinterface.h  plugin.cpp  qmldir  session.cpp  session.h  session_interface.h  surfacemanager.cpp  surfacemanager.h  taskcontroller.cpp  taskcontroller.h  windowmodel.cpp
src/modules/QtMir/Application/upstart/: applicationinfo.h  taskcontroller.cpp
src/modules/Unity/Application/: CMakeLists.txt  application.cpp  application.h  application_manager.cpp  mirbuffersgtexture.cpp  mirsurface.cpp  mirsurface.h  mirsurfaceitem.cpp  mirsurfaceitem.h  mirsurfacelistmodel.cpp  mirsurfacelistmodel.h  plugin.cpp  surfacemanager.cpp
src/modules/Unity/Application/upstart/: applicationinfo.cpp
tests/: CMakeLists.txt  check-requires-provides.sh
tests/framework/: CMakeLists.txt  fake_application_info.h  fake_mirsurface.h  fake_session.cpp  fake_session.h  mock_application_info.h  mock_proc_info.h  mock_session.h  mock_sessionmap.h  mock_settings.h  mock_shared_wakelock.h  mock_task_controller.cpp  mock_task_controller.h  qtmir_test.h
tests/mirserver/EventBuilder/: CMakeLists.txt
tests/mirserver/ScreensModel/: CMakeLists.txt
tests/mirserver/miral/: CMakeLists.txt  edid_test.cpp
tests/modules/Application/: CMakeLists.txt  application_test.cpp
tests/modules/ApplicationManager/: CMakeLists.txt  application_manager_test.cpp
tests/modules/General/: objectlistmodel_test.cpp
tests/modules/Session/: CMakeLists.txt  session_test.cpp  taskcontroller_test.cpp
tests/modules/SharedWakelock/: CMakeLists.txt  sharedwakelock_test.cpp
tests/modules/SurfaceManager/: CMakeLists.txt  surface_manager_test.cpp
tests/modules/WindowManager/: CMakeLists.txt  mirsurface_test.cpp  mirsurfaceitem_test.cpp  windowmodel_test.cpp
